# simple-airflow-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/simple_airflow_automation/: .env.example  airflow.cfg
src/simple_airflow_automation/apartment_scraper/: settings.py
src/simple_airflow_automation/apartment_scraper/spiders/: buyrentkenya.py
src/simple_airflow_automation/dags/: apartment_scraper_dag.py
